--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings" : {
+    "Token" : "secret key for token generation"
+  },
   "ConnectionStrings" : {
     "DefaultConnection" : "Data Source=DatingApp.db"
   },
