--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dhkbpboum",
+    "ApiKey": "117614368819127",
+    "ApiSecret": "VqifW4_9h84hs6dVQX2rAC0lgtg"
+  }
 }
